--- a/html/refresh'/index.html
+++ b/html/refresh'/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
         <title>REFRESHER</title>
         <meta name="author" content="">
     </head>
