--- a/html/refresh'/index.html
+++ b/html/refresh'/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>REFRESHER</title>
-        <meta name="author" content="">
+        <meta name="author" content="InvQ">
     </head>
     <body>
         <h1>THIS IS A REFRESHER TO HTML</h1>
